fixed add comment button on mobile

--- a/src/components/ServiceComments/ServiceComments.css
+++ b/src/components/ServiceComments/ServiceComments.css
@@ -295,7 +295,7 @@
         padding: 8px 6px;
         margin-top: 3px;
         margin-right: 9px;
-        height: 32px;
+        height: 34px;
         width: 18px;
         display: flex;
         align-items: center;
